src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Opportunity.Account.External_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Sales_Consultant__r.Street&amp;&apos;, &apos;&amp;Sales_Consultant__r.City&amp;&apos;, &apos;&amp;Sales_Consultant__r.State&amp;&apos;, &apos;&amp;Sales_Consultant__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Sales_Consultant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Sales_Consultant__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes &amp; Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Mobile__c</fullName>
        <formula>Sales_Consultant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone/Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_mark_fax__c</fullName>
        <defaultValue>&apos;Attention: &apos;&amp; $User.FirstName &amp; &apos; &apos; &amp;  $User.LastName &amp; &apos; - &apos; &amp;  $User.Department</defaultValue>
        <label>Please mark fax:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Account_Number__c</fullName>
        <formula>&apos;Ref: &apos; &amp; Opportunity.Account.External_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Code__c</fullName>
        <label>Rep Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>HE_Quote</fullName>
        <active>true</active>
        <description>Quote for Higher Education</description>
        <label>HE Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schools_Quote</fullName>
        <active>true</active>
        <description>Quote for Schools</description>
        <label>Schools Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>